# rust-chat-server

./: .gitignore  Cargo.toml  LICENSE  README.md
comms/: Cargo.toml  README.md
comms/src/: command.rs  event.rs  lib.rs
comms/src/transport/: client.rs  common.rs  mod.rs  server.rs
comms/tests/: e2e_server_and_client_transport.rs
server/: Cargo.toml  README.md
server/docs/: high-level-architecture.plantuml
server/examples/: stress_test.rs
server/resources/: chat_rooms_metadata.json
server/src/: main.rs
server/src/room_manager/: mod.rs  room_manager.rs
server/src/room_manager/room/: chat_room.rs  mod.rs  user_registry.rs  user_session_handle.rs
server/src/session/: chat_session.rs  mod.rs
tui/: Cargo.toml  README.md
tui/docs/: high-level-architecture.plantuml
tui/src/: main.rs  termination.rs
tui/src/state_store/: action.rs  mod.rs  state.rs  state_store.rs
tui/src/ui_management/: mod.rs  ui_manager.rs
tui/src/ui_management/components/: component.rs  input_box.rs  mod.rs
tui/src/ui_management/pages/: mod.rs
tui/src/ui_management/pages/chat_page/: chat_page.rs  mod.rs
tui/src/ui_management/pages/chat_page/components/: message_input_box.rs  mod.rs  room_list.rs
tui/src/ui_management/pages/chat_page/section/: mod.rs  usage.rs
tui/src/ui_management/pages/connect_page/: connect_page.rs  mod.rs
