[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
comms = { path = "../comms", features = ["server"] }
nanoid = "0.4.0"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17" }

[dev-dependencies]
comms = { path = "../comms", features = ["client"] }
rand = "0.8.5"
