[package]
name = "tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
circular-queue = "0.2.6"
comms = { path = "../comms", features = ["client"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = { version = "0.29.0", features = ["all-widgets"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17" }
